feat(tier-list): added diff to tierlist in backend
